--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+div{
+	width:400px;
+	height:600px;
+	background-color:#f5f5f5;
+	box-shadow:1px 1px 5px;
+}
+
+img{
+	width:;
+	
+}
+.middle{
+	text-align:center;
+	font-size:30px;
+}
+#btn{
+	text-align:center;
+	font-size:30px;
+	border-radius:15px;
+	padding:15px;
+	background-color:red;
+	color:white;
+}
