--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,21 @@ div{
 	height:600px;
 	background-color:#f5f5f5;
 	box-shadow:1px 1px 5px;
+	padding:30px;
 }
 
-img{
-	width:;
+ img{
+	padding-left:40px;
 	
-}
+	
+} 
 .middle{
 	text-align:center;
 	font-size:30px;
+	margin-down:80px;
 }
 #btn{
-	text-align:center;
+	margin-left:120px;
 	font-size:30px;
 	border-radius:15px;
 	padding:15px;
